--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   "dependencies": {
     "@expo/config-plugins": "^7.2.4",
     "buffer": "^6.0.3",
-    "onnxruntime-common": "file:../common"
+    "onnxruntime-common": "~1.16.3"
   },
   "scripts": {
     "typescript": "tsc --noEmit",
