--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prettier": "^2.6.2",
     "react": "^18.1.0",
     "react-native": "^0.69.7",
-    "react-native-builder-bob": "^0.18.2"
+    "react-native-builder-bob": "^0.18.2",
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "react": "*",
